plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in Native, common'")!>Common<!> : Number

fun takeCommon(<!UNUSED_PARAMETER!>c<!>: Common) {
}